[project]
name = "lib"
version = "0.1.0"
description = "Python utilities"
authors = [
    {name = "Ethan Dawes", email = "ethand.python@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
